--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <h1>Bienvenu dans votre glossaire familial</h1>
+  <p>veuillez vous identifier pour avoir accès au vocabulaire de vos san</p>
+</div>
