last details V1 release

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: linear-gradient(296.42deg,#419fd5 28.15%,#384dbd 69.57%);
+  background: linear-gradient(296.42deg,#8FB996 28.15%,#4B7F52 69.57%);
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -17,7 +17,7 @@
 // box-shadow:  -5px -5px 0px #161f4c,
 //              5px 5px 0px #5a7bff;
 border-radius: 67px;
-background: linear-gradient(315deg, #3245aa, #3c52ca);
-box-shadow:  -5px -5px 0px #161f4c,
-             5px 5px 0px #5a7bff;
+background: linear-gradient(315deg, #4B7F52, #8FB996);
+box-shadow:  -5px -5px 0px #4B7F52,
+             5px 5px 0px #8FB996;
 }
