--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,5 +3,5 @@
     <%= form.text_area :content, class: "form-control" %>
   </div>
 
-  <%= form.submit "Valider", class: "btn btn-light" %>
+  <%= form.submit "Valider", class: "btn btn-light", class: "button" %>
 <% end %>
