--- a/app/views/definitions/_definition.html.erb
+++ b/app/views/definitions/_definition.html.erb
@@ -1,7 +1,5 @@
-<h2><%= @definition.title %></h2>
-<hr>
-<p><%= @definition.content %></p>
-<hr>
+<h2><strong><%= @definition.title %></strong></h2>
+<p><i class="fas fa-chevron-right" style="color: #4B7F52;"></i> <%= @definition.content %></p>
 
 <%# <button type="button" class="btn btn-plus" data-bs-toggle="modal" data-bs-target="#updateDefinition">
   <i class="fas fa-plus" style="color: #130872;"></i>
