--- a/app/views/definitions/_definition_update_destroy.html.erb
+++ b/app/views/definitions/_definition_update_destroy.html.erb
@@ -20,7 +20,7 @@
                   <%= f.input :content %>
                 </div>
                 <div class="modal-footer">
-                  <%= f.button :submit, "Valider" %>
+                  <%= f.button :submit, "Valider", class: "button" %>
                 </div>
               <% end %>
 
