--- a/app/views/definitions/week.html.erb
+++ b/app/views/definitions/week.html.erb
@@ -1,5 +1,5 @@
 <div class="container" id="container-definitions">
-  <h2 class="mt-4">Las Definicionas de la Semana</h2>
+  <h2 class="mt-4">Week defs</h2>
   <div>
     <ul>
       <%= render "definitions/definitions", definitions: @definitions %>
