--- a/app/assets/stylesheets/components/_card_definition.scss
+++ b/app/assets/stylesheets/components/_card_definition.scss
@@ -2,7 +2,9 @@
   border: 1px solid gray;
   border-radius: 5px;
   padding: 10px 15px;
-  background-color: #fff;
+  background-color: #8FB996;
+  color: white;
+  box-shadow: 5px 5px 5px #4B7F52;
 }
 
 #topdef-div {
@@ -13,7 +15,7 @@
 }
 
 #def-list {
-  border-right: 15px double $primary;
+  // border-right: 15px double $primary;
 }
 
 .btn-delete{
