--- a/app/views/definitions/_definition_create.html.erb
+++ b/app/views/definitions/_definition_create.html.erb
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div class="modal fade" id="createDefinitionModal" tabindex="-1" aria-labelledby="createDefinitionModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content" id="modal-def-background">
       <div class="modal-header">
         <h1 class="modal-title" id="createDefinitionModalLabel">Nouvelle def</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -12,7 +12,7 @@
             <%= f.input :content, label: "Description" %>
           </div>
           <div class="modal-footer">
-              <%= f.button :submit, "Valider" %>
+              <%= f.button :submit, "Valider", class: "button" %>
           </div>
       <% end %>
     </div>
