--- a/app/views/definitions/_definitions.html.erb
+++ b/app/views/definitions/_definitions.html.erb
@@ -1,8 +1,6 @@
 <ul>
   <% @definitions.each do |definition|%>
-  <hr>
-  <li ><h4><%= link_to(definition.title, definition_path(definition)) %></h4> <i class="fas fa-chevron-right" style="color: #130872;"></i> <%= definition.content %>
+  <li class="bubble-div"><h4><%= link_to(definition.title, definition_path(definition)) %></h4> <i class="fas fa-chevron-right" style="color: #4B7F52;"></i> <%= definition.content %>
   </li>
-  <hr>
   <%end%>
 </ul>
