--- a/app/views/definitions/index.html.erb
+++ b/app/views/definitions/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class= "d-flex mt-4">
       <h2 class="">Las Definicionas</h2>
-      <div class="ml-5">
+      <div class="">
         <button type="button" class="btn btn-plus" data-bs-toggle="modal" data-bs-target="#createDefinitionModal">
         <i class="fas fa-plus" style="color: #130872;"></i>
         </button>
@@ -13,18 +13,6 @@
       <%= render "definitions/definitions", definitions: @definitions %>
     </div>
 
-    <%# <div id="topdef-div" class="col-md-4 col-12">
-      <h2>Hot Defz 🔥</h2>
-      <% @top_definitions.each do |definition|%>
-        <%# <hr> %>
-        <%# <li ><h4><%= link_to(definition.title, definition_path(definition)) </h4> %>
-        <%# <i class="fas fa-chevron-right" style="color: #130872;"></i> <%= definition.content %>
-        <%# <br> %>
-        <%# <p><%= pluralize(definition.likes.count, 'like')  💖</p> %>
-        <%# </li>
-        <hr>
-      <% end %>
-    <%# </div> %>
 
   </div>
 </div>
