--- a/app/views/definitions/mes_definitions.html.erb
+++ b/app/views/definitions/mes_definitions.html.erb
@@ -1,5 +1,5 @@
 <div class="container" id="container-definitions">
-  <h2 class="mt-4">Mis Definicionas</h2>
+  <h2 class="mt-4">Mes defs</h2>
   <div>
     <%= render "definitions/definitions", definitions: @definitions %>
 
