--- a/app/views/definitions/index.html.erb
+++ b/app/views/definitions/index.html.erb
@@ -4,7 +4,7 @@
       <h2 class="">Las Definicionas</h2>
       <div class="">
         <button type="button" class="btn btn-plus" data-bs-toggle="modal" data-bs-target="#createDefinitionModal">
-        <i class="fas fa-plus" style="color: #130872;"></i>
+        <i class="fas fa-plus" style="color: #4B7F52;"></i>
         </button>
         <%= render "definitions/definition_create", definition: @definition %>
       </div>
