--- a/app/views/definitions/_definition_update_destroy.html.erb
+++ b/app/views/definitions/_definition_update_destroy.html.erb
@@ -1,9 +1,9 @@
   <!-- Update/destroy definition -->
   <div class="container-edit-delete">
       <!-- Button -->
-      <div class="d-flex space justify-content-end">
-        <p class="icons-update-delete" data-bs-toggle="modal" data-bs-target="#updateDefinition<%=@definition.id%>"><i class="fa-regular fa-pen-to-square"></i></p>
-        <p class="icons-update-delete"><%= link_to '<i class="fa-regular fa-trash-can"></i>'.html_safe, definition_path(@definition), data: { turbo_method: :delete, turbo_confirm: "Etes vous sûr?" } %></p>
+      <div id="def-update-destroy-icons" class="d-flex">
+        <p class="" style="padding-right: 5px;" data-bs-toggle="modal" data-bs-target="#updateDefinition<%=@definition.id%>"><i class="fa-regular fa-pen-to-square"></i></p>
+        <p class="pl-5"><%= link_to '<i class="fa-regular fa-trash-can"></i>'.html_safe, definition_path(@definition), data: { turbo_method: :delete, turbo_confirm: "Etes vous sûr?" } %></p>
       </div>
 
       <!-- Modal -->
