--- a/app/views/definitions/show.html.erb
+++ b/app/views/definitions/show.html.erb
@@ -31,7 +31,7 @@
           Nouveau commentaire
         </button>
 
-        <div class="definition-card mt-3 d-none"
+        <div class="mt-3 d-none"
         data-new-comment-target="newCommentDiv">
           <h3>Nouveau commentaire</h3>
           <div class="col-md-4 col-12">
